--- a/validacao.html
+++ b/validacao.html
@@ -18,4 +18,5 @@
 
     <script src="script3.js"></script> <!-- Importa o JS -->
 </body>
+ <a href="https://gustavopado.github.io/Principal/" class="btn btn-info link-a-1">Voltar</a>
 </html>
